# CodeCRDT

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SCIENCE.md  nginx.conf
evaluation/: README.md  config.yaml  main.py  prompts.yaml  pyproject.toml
evaluation/evaluation_results/: README.md  environment_info.json  evaluation_report.json  evaluation_report.yaml  objective_metrics.csv  objective_metrics_analysis.json  objective_metrics_corrected.json  paired_statistical_analysis.json
evaluation/evaluation_results/objective_evaluation_project/: package-lock.json  package.json  tsconfig.json
evaluation/evaluation_results/results/: algorithm_visualizer_parallel_run001.json  algorithm_visualizer_parallel_run002.json  algorithm_visualizer_parallel_run003.json  algorithm_visualizer_parallel_run004.json  algorithm_visualizer_parallel_run005.json  algorithm_visualizer_parallel_run006.json  algorithm_visualizer_parallel_run007.json  algorithm_visualizer_parallel_run008.json  algorithm_visualizer_parallel_run009.json  algorithm_visualizer_parallel_run010.json  algorithm_visualizer_parallel_run011.json  algorithm_visualizer_parallel_run012.json  algorithm_visualizer_parallel_run013.json  algorithm_visualizer_parallel_run014.json  algorithm_visualizer_parallel_run015.json  algorithm_visualizer_parallel_run016.json  algorithm_visualizer_parallel_run017.json  algorithm_visualizer_parallel_run018.json  algorithm_visualizer_parallel_run019.json  algorithm_visualizer_parallel_run020.json  algorithm_visualizer_parallel_run021.json  algorithm_visualizer_parallel_run022.json  algorithm_visualizer_parallel_run023.json  algorithm_visualizer_parallel_run024.json  algorithm_visualizer_parallel_run025.json  algorithm_visualizer_parallel_run026.json  algorithm_visualizer_parallel_run027.json  (+573 more)
evaluation/src/: analyze_objective_metrics.py  analyze_objective_metrics_current.py  compute_objective_metrics.py  compute_objective_metrics_current.py  paired_statistical_analysis.py
paper/: Makefile  (+1 more)
(+99 files in other folders)
